<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lab_google_frame"
        style="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"
        />

    <Button
        android:id="@+id/btn_sign_in_google"
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.TextAppearance.Menu_button"
        />
    <!--android:onClick="onSignInButtonClicked"-->

    <Button
        android:id="@+id/btn_show_leaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_show_leaderboard"
        style="@style/AppTheme.TextAppearance.Menu_button"
        android:onClick="onShowLeaderboardsRequested"
        />

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        style="@style/AppTheme.TextAppearance.Menu_button"
        android:onClick="onSignOutButtonClicked"
        />

</LinearLayout>